feat: use a individual query token for each bucket to authenticate query interface
